--- a/ReadMe
+++ b/ReadMe
@@ -1,1 +1,5 @@
-Java+SpringBoot+HTML+CSS+Thymeleaf+Bootstrap+Javascript+MySQL+SpringMVC
+Loan Application System - Loan Connect
+
+Loan Connect is a Spring Boot project that provides a user-friendly web application for managing loan applications. 
+It facilitates a seamless process for borrowers to apply for loans and for lenders to review and approve applications. 
+This document will guide you through the installation process to set up Loan Connect on your local system.
